# MedSort

./: .gitignore  CMakeLists.txt  README.md  build_and_run.ps1  main.cpp  run.ps1
data/: prescriptions.txt
include/: HospitalData.hpp  HospitalStaff.hpp  Patient.hpp  Prescriptions.hpp  config.hpp
src/: HospitalData.cpp  HospitalStaff.cpp  Patient.cpp  Prescriptions.cpp
